Image Picker for D6 in 6.x-2.x, 20011-03-17
------------------------------------
by hutch, added multiple uploads

Image Picker for D6 in 6.x-2.x, 20011-03-06
------------------------------------
by hutch, moved some functions back to imagepicker.module

Image Picker for D6 in 6.x-2.x, 20011-03-04
------------------------------------
by hutch, various fixes to private download support

Image Picker for D6 in 6.x-2.x, 20011-03-03
------------------------------------
by hutch, added private download support,
  #1079540 patch by klflote

Image Picker for D6 in 6.x-2.x, 20011-02-27
------------------------------------
by hutch, changed InsertatCursor to imagepickerInsertatCursor
  in imagepicker_iframe.js to avoid potential clashes with insert module

Image Picker  for D6 in DRUPAL-6--2, 20011-02-17
------------------------------------
by hutch, reorganised files for reduced footprint

Image Picker  for D6 in DRUPAL-6--2, 20011-01-29
------------------------------------
by hutch, improved gallery blocks

Image Picker  for D6 in DRUPAL-6--2, 20011-01-26
------------------------------------
by hutch, added gallery blocks

Image Picker  for D6 in DRUPAL-6--2, 20011-01-24
------------------------------------
by hutch, by hutch, fixed jpeg quality issue #1036216
  fixed rows per page bug #1038288

Image Picker  for D6 in DRUPAL-6--2, 20010-12-21
------------------------------------
by hutch  added PECL uploadprogress support

Image Picker  for D6 in DRUPAL-6--2, 20010-12-13
------------------------------------
by hutch, cleaned up js and themeing

Image Picker  for D6 in DRUPAL-6--2, 20010-11-08
------------------------------------
by hutch, changed img_date field to int, added date format to config

Image Picker  for D6 in DRUPAL-6--2, 20010-11-07
------------------------------------
by hutch, fixed hook_form_alter reference bug and incompatibility with filepicker

Image Picker  for D6 in DRUPAL-6--2, 20010-10-09
------------------------------------